# stories-api

django/: .coverage  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
django/blog/: admin.py  models.py  tests.py
django/blog_api/: serializers.py  views.py
django/core/: .env  settings.py
django/htmlcov/: _venv_lib_python3_9_site-packages__virtualenv_py.html  _venv_lib_python3_9_site-packages_asgiref___init___py.html  _venv_lib_python3_9_site-packages_asgiref_current_thread_executor_py.html  _venv_lib_python3_9_site-packages_asgiref_local_py.html  _venv_lib_python3_9_site-packages_asgiref_sync_py.html  _venv_lib_python3_9_site-packages_corsheaders___init___py.html  _venv_lib_python3_9_site-packages_corsheaders_apps_py.html  _venv_lib_python3_9_site-packages_corsheaders_checks_py.html  _venv_lib_python3_9_site-packages_corsheaders_conf_py.html  _venv_lib_python3_9_site-packages_corsheaders_defaults_py.html  _venv_lib_python3_9_site-packages_corsheaders_middleware_py.html  _venv_lib_python3_9_site-packages_corsheaders_signals_py.html  _venv_lib_python3_9_site-packages_django___init___py.html  _venv_lib_python3_9_site-packages_django_apps___init___py.html  _venv_lib_python3_9_site-packages_django_apps_config_py.html  _venv_lib_python3_9_site-packages_django_apps_registry_py.html  _venv_lib_python3_9_site-packages_django_conf___init___py.html  _venv_lib_python3_9_site-packages_django_conf_global_settings_py.html  _venv_lib_python3_9_site-packages_django_conf_locale___init___py.html  _venv_lib_python3_9_site-packages_django_conf_urls___init___py.html  (+500 more)
(+9 files in other folders)
