[tool.poetry]
name = "django1"
version = "0.1.0"
description = ""
authors = ["sondos-braim <sondos9811@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.5"
asgiref = "^3.3.1"
autopep8 = "^1.5.4"
coverage = "^5.4"
django-cors-headers = "^3.7.0"
djangorestframework = "^3.12.2"
djangorestframework-simplejwt = "^4.6.0"
pycodestyle = "^2.6.0"
PyJWT = "^2.0.1"
pytz = "^2020.5"
sqlparse = "^0.4.1"
toml = "^0.10.2"
psycopg2 = "^2.8.6"
django-environ = "^0.4.5"
gunicorn = "^20.0.4"
whitenoise = {extras = ["brotli"], version = "^5.2.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
